AvaliaTrabs/Original/compilador.output
Terminals unused in grammar

    LABEL
    TYPE
    ARRAY
    OF
    INTEGER
    BOOLEAN
    GOTO
    NOT
    ABRE_CHAVES
    FECHA_CHAVES
    ABRE_COLCHETES
    FECHA_COLCHETES
    BARRA


Rules useless in parser due to conflicts

   78 $@13: %empty


State 36 conflicts: 1 shift/reduce
State 37 conflicts: 1 shift/reduce
State 39 conflicts: 1 shift/reduce
State 40 conflicts: 1 shift/reduce
State 41 conflicts: 1 shift/reduce
State 73 conflicts: 1 shift/reduce
State 167 conflicts: 1 shift/reduce


Grammar

    0 $accept: programa $end

    1 $@1: %empty

    2 programa: $@1 PROGRAM IDENT declara_program

    3 declara_program: ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO
    4                | PONTO_E_VIRGULA bloco PONTO

    5 $@2: %empty

    6 bloco: parte_declara_vars $@2 comando_composto

    7 parte_declara_vars: var

    8 $@3: %empty

    9 var: $@3 VAR declara_vars
   10    | %empty

   11 declara_vars: declara_vars declara_var
   12             | declara_var

   13 $@4: %empty

   14 declara_var: $@4 lista_id_var DOIS_PONTOS tipo PONTO_E_VIRGULA

   15 tipo: IDENT

   16 lista_id_var: lista_id_var VIRGULA IDENT
   17             | IDENT

   18 lista_idents: lista_idents VIRGULA IDENT
   19             | IDENT

   20 leitura: READ ABRE_PARENTESES param_read FECHA_PARENTESES

   21 param_read: param_read VIRGULA read
   22           | read

   23 read: IDENT

   24 impressao: WRITE ABRE_PARENTESES param_write FECHA_PARENTESES

   25 param_write: param_write VIRGULA write
   26            | write

   27 write: IDENT
   28      | NUMERO

   29 comando_composto: procedure_function
   30                 | T_BEGIN comandos T_END

   31 $@5: %empty

   32 $@6: %empty

   33 procedure_function: PROCEDURE $@5 IDENT $@6 procedure_function2 PONTO_E_VIRGULA procedure_function3

   34 $@7: %empty

   35 $@8: %empty

   36 procedure_function: FUNCTION $@7 IDENT $@8 procedure_function2 DOIS_PONTOS retorno_func PONTO_E_VIRGULA procedure_function3

   37 procedure_function2: ABRE_PARENTESES declara_params FECHA_PARENTESES
   38                    | %empty

   39 $@9: %empty

   40 procedure_function3: bloco PONTO_E_VIRGULA $@9 comando_composto

   41 declara_params: VAR params_ref
   42               | VAR params_ref declara_params2
   43               | params_valor declara_params2
   44               | params_valor

   45 declara_params2: PONTO_E_VIRGULA declara_params

   46 params_valor: params_valor VIRGULA param_valor
   47             | param_valor

   48 $@10: %empty

   49 param_valor: IDENT $@10 DOIS_PONTOS tipo_param_valor

   50 tipo_param_valor: IDENT

   51 params_ref: params_ref VIRGULA param_ref
   52           | param_ref

   53 param_ref: IDENT DOIS_PONTOS tipo_param_ref

   54 tipo_param_ref: IDENT

   55 retorno_func: IDENT

   56 comandos: atribuicao PONTO_E_VIRGULA comandos
   57         | atribuicao PONTO_E_VIRGULA
   58         | atribuicao
   59         | leitura PONTO_E_VIRGULA comandos
   60         | leitura PONTO_E_VIRGULA
   61         | leitura
   62         | impressao PONTO_E_VIRGULA comandos
   63         | impressao PONTO_E_VIRGULA
   64         | impressao
   65         | repeticao PONTO_E_VIRGULA comandos
   66         | repeticao PONTO_E_VIRGULA
   67         | repeticao
   68         | condicao PONTO_E_VIRGULA comandos
   69         | condicao PONTO_E_VIRGULA
   70         | condicao

   71 $@11: %empty

   72 condicao: IF ABRE_PARENTESES expressao_booleana $@11 FECHA_PARENTESES THEN condicao2

   73 $@12: %empty

   74 condicao: IF expressao_booleana $@12 THEN condicao2

   75 condicao2: condicao3 ELSE condicao4
   76          | condicao3 ELSE T_BEGIN condicao4 T_END
   77          | T_BEGIN condicao3 T_END ELSE condicao4

   78 $@13: %empty

   79 condicao2: T_BEGIN condicao3 T_END $@13 ELSE T_BEGIN condicao4 T_END

   80 condicao3: comandos

   81 $@14: %empty

   82 condicao4: $@14 comandos

   83 $@15: %empty

   84 repeticao: WHILE $@15 repeticao2

   85 $@16: %empty

   86 repeticao2: ABRE_PARENTESES expressao_booleana FECHA_PARENTESES DO $@16 repeticao3

   87 $@17: %empty

   88 repeticao2: expressao_booleana DO $@17 repeticao3

   89 repeticao3: comando_composto
   90           | comandos

   91 expressao_booleana: expressao

   92 $@18: %empty

   93 $@19: %empty

   94 atribuicao: IDENT $@18 ATRIBUICAO $@19 expressao

   95 expressao: expressao_interna relacao expressao_interna
   96          | expressao_interna

   97 relacao: MAIOR
   98        | MENOR
   99        | MAIOR_IGUAL
  100        | MENOR_IGUAL
  101        | IGUAL
  102        | DESIGUAL

  103 expressao_interna: expressao_interna MAIS termo
  104                  | expressao_interna MENOS termo
  105                  | expressao_interna OR termo
  106                  | termo

  107 termo: termo ASTERISCO fator
  108      | termo DIV fator
  109      | termo AND fator
  110      | fator

  111 fator: IDENT
  112      | NUMERO
  113      | ABRE_PARENTESES expressao FECHA_PARENTESES


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    PROGRAM (258) 2
    ABRE_PARENTESES (259) 3 20 24 37 72 86 113
    FECHA_PARENTESES (260) 3 20 24 37 72 86 113
    VIRGULA (261) 16 18 21 25 46 51
    PONTO_E_VIRGULA (262) 3 4 14 33 36 40 45 56 57 59 60 62 63 65 66 68 69
    DOIS_PONTOS (263) 14 36 49 53
    PONTO (264) 3 4
    T_BEGIN (265) 30 76 77 79
    T_END (266) 30 76 77 79
    VAR (267) 9 41 42
    IDENT (268) 2 15 16 17 18 19 23 27 33 36 49 50 53 54 55 94 111
    ATRIBUICAO (269) 94
    NUMERO (270) 28 112
    LABEL (271)
    TYPE (272)
    ARRAY (273)
    OF (274)
    PROCEDURE (275) 33
    FUNCTION (276) 36
    INTEGER (277)
    BOOLEAN (278)
    GOTO (279)
    IF (280) 72 74
    THEN (281) 72 74
    ELSE (282) 75 76 77 79
    WHILE (283) 84
    DO (284) 86 88
    OR (285) 105
    DIV (286) 108
    AND (287) 109
    NOT (288)
    ABRE_CHAVES (289)
    FECHA_CHAVES (290)
    ABRE_COLCHETES (291)
    FECHA_COLCHETES (292)
    IGUAL (293) 101
    MAIOR (294) 97
    MENOR (295) 98
    DESIGUAL (296) 102
    MAIOR_IGUAL (297) 99
    MENOR_IGUAL (298) 100
    MAIS (299) 103
    MENOS (300) 104
    ASTERISCO (301) 107
    BARRA (302)
    READ (303) 20
    WRITE (304) 24


Nonterminals, with rules where they appear

    $accept (50)
        on left: 0
    programa (51)
        on left: 2
        on right: 0
    $@1 (52)
        on left: 1
        on right: 2
    declara_program (53)
        on left: 3 4
        on right: 2
    bloco (54)
        on left: 6
        on right: 3 4 40
    $@2 (55)
        on left: 5
        on right: 6
    parte_declara_vars (56)
        on left: 7
        on right: 6
    var (57)
        on left: 9 10
        on right: 7
    $@3 (58)
        on left: 8
        on right: 9
    declara_vars (59)
        on left: 11 12
        on right: 9 11
    declara_var (60)
        on left: 14
        on right: 11 12
    $@4 (61)
        on left: 13
        on right: 14
    tipo (62)
        on left: 15
        on right: 14
    lista_id_var (63)
        on left: 16 17
        on right: 14 16
    lista_idents (64)
        on left: 18 19
        on right: 3 18
    leitura (65)
        on left: 20
        on right: 59 60 61
    param_read (66)
        on left: 21 22
        on right: 20 21
    read (67)
        on left: 23
        on right: 21 22
    impressao (68)
        on left: 24
        on right: 62 63 64
    param_write (69)
        on left: 25 26
        on right: 24 25
    write (70)
        on left: 27 28
        on right: 25 26
    comando_composto (71)
        on left: 29 30
        on right: 6 40 89
    procedure_function (72)
        on left: 33 36
        on right: 29
    $@5 (73)
        on left: 31
        on right: 33
    $@6 (74)
        on left: 32
        on right: 33
    $@7 (75)
        on left: 34
        on right: 36
    $@8 (76)
        on left: 35
        on right: 36
    procedure_function2 (77)
        on left: 37 38
        on right: 33 36
    procedure_function3 (78)
        on left: 40
        on right: 33 36
    $@9 (79)
        on left: 39
        on right: 40
    declara_params (80)
        on left: 41 42 43 44
        on right: 37 45
    declara_params2 (81)
        on left: 45
        on right: 42 43
    params_valor (82)
        on left: 46 47
        on right: 43 44 46
    param_valor (83)
        on left: 49
        on right: 46 47
    $@10 (84)
        on left: 48
        on right: 49
    tipo_param_valor (85)
        on left: 50
        on right: 49
    params_ref (86)
        on left: 51 52
        on right: 41 42 51
    param_ref (87)
        on left: 53
        on right: 51 52
    tipo_param_ref (88)
        on left: 54
        on right: 53
    retorno_func (89)
        on left: 55
        on right: 36
    comandos (90)
        on left: 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70
        on right: 30 56 59 62 65 68 80 82 90
    condicao (91)
        on left: 72 74
        on right: 68 69 70
    $@11 (92)
        on left: 71
        on right: 72
    $@12 (93)
        on left: 73
        on right: 74
    condicao2 (94)
        on left: 75 76 77 79
        on right: 72 74
    $@13 (95)
        on left: 78
        on right: 79
    condicao3 (96)
        on left: 80
        on right: 75 76 77 79
    condicao4 (97)
        on left: 82
        on right: 75 76 77 79
    $@14 (98)
        on left: 81
        on right: 82
    repeticao (99)
        on left: 84
        on right: 65 66 67
    $@15 (100)
        on left: 83
        on right: 84
    repeticao2 (101)
        on left: 86 88
        on right: 84
    $@16 (102)
        on left: 85
        on right: 86
    $@17 (103)
        on left: 87
        on right: 88
    repeticao3 (104)
        on left: 89 90
        on right: 86 88
    expressao_booleana (105)
        on left: 91
        on right: 72 74 86 88
    atribuicao (106)
        on left: 94
        on right: 56 57 58
    $@18 (107)
        on left: 92
        on right: 94
    $@19 (108)
        on left: 93
        on right: 94
    expressao (109)
        on left: 95 96
        on right: 91 94 113
    relacao (110)
        on left: 97 98 99 100 101 102
        on right: 95
    expressao_interna (111)
        on left: 103 104 105 106
        on right: 95 96 103 104 105
    termo (112)
        on left: 107 108 109 110
        on right: 103 104 105 106 107 108 109
    fator (113)
        on left: 111 112 113
        on right: 107 108 109 110


State 0

    0 $accept: . programa $end

    $default  reduce using rule 1 ($@1)

    programa  go to state 1
    $@1       go to state 2


State 1

    0 $accept: programa . $end

    $end  shift, and go to state 3


State 2

    2 programa: $@1 . PROGRAM IDENT declara_program

    PROGRAM  shift, and go to state 4


State 3

    0 $accept: programa $end .

    $default  accept


State 4

    2 programa: $@1 PROGRAM . IDENT declara_program

    IDENT  shift, and go to state 5


State 5

    2 programa: $@1 PROGRAM IDENT . declara_program

    ABRE_PARENTESES  shift, and go to state 6
    PONTO_E_VIRGULA  shift, and go to state 7

    declara_program  go to state 8


State 6

    3 declara_program: ABRE_PARENTESES . lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT  shift, and go to state 9

    lista_idents  go to state 10


State 7

    4 declara_program: PONTO_E_VIRGULA . bloco PONTO

    VAR       reduce using rule 8 ($@3)
    $default  reduce using rule 10 (var)

    bloco               go to state 11
    parte_declara_vars  go to state 12
    var                 go to state 13
    $@3                 go to state 14


State 8

    2 programa: $@1 PROGRAM IDENT declara_program .

    $default  reduce using rule 2 (programa)


State 9

   19 lista_idents: IDENT .

    $default  reduce using rule 19 (lista_idents)


State 10

    3 declara_program: ABRE_PARENTESES lista_idents . FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO
   18 lista_idents: lista_idents . VIRGULA IDENT

    FECHA_PARENTESES  shift, and go to state 15
    VIRGULA           shift, and go to state 16


State 11

    4 declara_program: PONTO_E_VIRGULA bloco . PONTO

    PONTO  shift, and go to state 17


State 12

    6 bloco: parte_declara_vars . $@2 comando_composto

    $default  reduce using rule 5 ($@2)

    $@2  go to state 18


State 13

    7 parte_declara_vars: var .

    $default  reduce using rule 7 (parte_declara_vars)


State 14

    9 var: $@3 . VAR declara_vars

    VAR  shift, and go to state 19


State 15

    3 declara_program: ABRE_PARENTESES lista_idents FECHA_PARENTESES . PONTO_E_VIRGULA bloco PONTO

    PONTO_E_VIRGULA  shift, and go to state 20


State 16

   18 lista_idents: lista_idents VIRGULA . IDENT

    IDENT  shift, and go to state 21


State 17

    4 declara_program: PONTO_E_VIRGULA bloco PONTO .

    $default  reduce using rule 4 (declara_program)


State 18

    6 bloco: parte_declara_vars $@2 . comando_composto

    T_BEGIN    shift, and go to state 22
    PROCEDURE  shift, and go to state 23
    FUNCTION   shift, and go to state 24

    comando_composto    go to state 25
    procedure_function  go to state 26


State 19

    9 var: $@3 VAR . declara_vars

    $default  reduce using rule 13 ($@4)

    declara_vars  go to state 27
    declara_var   go to state 28
    $@4           go to state 29


State 20

    3 declara_program: ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA . bloco PONTO

    VAR       reduce using rule 8 ($@3)
    $default  reduce using rule 10 (var)

    bloco               go to state 30
    parte_declara_vars  go to state 12
    var                 go to state 13
    $@3                 go to state 14


State 21

   18 lista_idents: lista_idents VIRGULA IDENT .

    $default  reduce using rule 18 (lista_idents)


State 22

   30 comando_composto: T_BEGIN . comandos T_END

    IDENT  shift, and go to state 31
    IF     shift, and go to state 32
    WHILE  shift, and go to state 33
    READ   shift, and go to state 34
    WRITE  shift, and go to state 35

    leitura     go to state 36
    impressao   go to state 37
    comandos    go to state 38
    condicao    go to state 39
    repeticao   go to state 40
    atribuicao  go to state 41


State 23

   33 procedure_function: PROCEDURE . $@5 IDENT $@6 procedure_function2 PONTO_E_VIRGULA procedure_function3

    $default  reduce using rule 31 ($@5)

    $@5  go to state 42


State 24

   36 procedure_function: FUNCTION . $@7 IDENT $@8 procedure_function2 DOIS_PONTOS retorno_func PONTO_E_VIRGULA procedure_function3

    $default  reduce using rule 34 ($@7)

    $@7  go to state 43


State 25

    6 bloco: parte_declara_vars $@2 comando_composto .

    $default  reduce using rule 6 (bloco)


State 26

   29 comando_composto: procedure_function .

    $default  reduce using rule 29 (comando_composto)


State 27

    9 var: $@3 VAR declara_vars .
   11 declara_vars: declara_vars . declara_var

    IDENT     reduce using rule 13 ($@4)
    $default  reduce using rule 9 (var)

    declara_var  go to state 44
    $@4          go to state 29


State 28

   12 declara_vars: declara_var .

    $default  reduce using rule 12 (declara_vars)


State 29

   14 declara_var: $@4 . lista_id_var DOIS_PONTOS tipo PONTO_E_VIRGULA

    IDENT  shift, and go to state 45

    lista_id_var  go to state 46


State 30

    3 declara_program: ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco . PONTO

    PONTO  shift, and go to state 47


State 31

   94 atribuicao: IDENT . $@18 ATRIBUICAO $@19 expressao

    $default  reduce using rule 92 ($@18)

    $@18  go to state 48


State 32

   72 condicao: IF . ABRE_PARENTESES expressao_booleana $@11 FECHA_PARENTESES THEN condicao2
   74         | IF . expressao_booleana $@12 THEN condicao2

    ABRE_PARENTESES  shift, and go to state 49
    IDENT            shift, and go to state 50
    NUMERO           shift, and go to state 51

    expressao_booleana  go to state 52
    expressao           go to state 53
    expressao_interna   go to state 54
    termo               go to state 55
    fator               go to state 56


State 33

   84 repeticao: WHILE . $@15 repeticao2

    $default  reduce using rule 83 ($@15)

    $@15  go to state 57


State 34

   20 leitura: READ . ABRE_PARENTESES param_read FECHA_PARENTESES

    ABRE_PARENTESES  shift, and go to state 58


State 35

   24 impressao: WRITE . ABRE_PARENTESES param_write FECHA_PARENTESES

    ABRE_PARENTESES  shift, and go to state 59


State 36

   59 comandos: leitura . PONTO_E_VIRGULA comandos
   60         | leitura . PONTO_E_VIRGULA
   61         | leitura .

    PONTO_E_VIRGULA  shift, and go to state 60

    PONTO_E_VIRGULA  [reduce using rule 61 (comandos)]
    $default         reduce using rule 61 (comandos)


State 37

   62 comandos: impressao . PONTO_E_VIRGULA comandos
   63         | impressao . PONTO_E_VIRGULA
   64         | impressao .

    PONTO_E_VIRGULA  shift, and go to state 61

    PONTO_E_VIRGULA  [reduce using rule 64 (comandos)]
    $default         reduce using rule 64 (comandos)


State 38

   30 comando_composto: T_BEGIN comandos . T_END

    T_END  shift, and go to state 62


State 39

   68 comandos: condicao . PONTO_E_VIRGULA comandos
   69         | condicao . PONTO_E_VIRGULA
   70         | condicao .

    PONTO_E_VIRGULA  shift, and go to state 63

    PONTO_E_VIRGULA  [reduce using rule 70 (comandos)]
    $default         reduce using rule 70 (comandos)


State 40

   65 comandos: repeticao . PONTO_E_VIRGULA comandos
   66         | repeticao . PONTO_E_VIRGULA
   67         | repeticao .

    PONTO_E_VIRGULA  shift, and go to state 64

    PONTO_E_VIRGULA  [reduce using rule 67 (comandos)]
    $default         reduce using rule 67 (comandos)


State 41

   56 comandos: atribuicao . PONTO_E_VIRGULA comandos
   57         | atribuicao . PONTO_E_VIRGULA
   58         | atribuicao .

    PONTO_E_VIRGULA  shift, and go to state 65

    PONTO_E_VIRGULA  [reduce using rule 58 (comandos)]
    $default         reduce using rule 58 (comandos)


State 42

   33 procedure_function: PROCEDURE $@5 . IDENT $@6 procedure_function2 PONTO_E_VIRGULA procedure_function3

    IDENT  shift, and go to state 66


State 43

   36 procedure_function: FUNCTION $@7 . IDENT $@8 procedure_function2 DOIS_PONTOS retorno_func PONTO_E_VIRGULA procedure_function3

    IDENT  shift, and go to state 67


State 44

   11 declara_vars: declara_vars declara_var .

    $default  reduce using rule 11 (declara_vars)


State 45

   17 lista_id_var: IDENT .

    $default  reduce using rule 17 (lista_id_var)


State 46

   14 declara_var: $@4 lista_id_var . DOIS_PONTOS tipo PONTO_E_VIRGULA
   16 lista_id_var: lista_id_var . VIRGULA IDENT

    VIRGULA      shift, and go to state 68
    DOIS_PONTOS  shift, and go to state 69


State 47

    3 declara_program: ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO .

    $default  reduce using rule 3 (declara_program)


State 48

   94 atribuicao: IDENT $@18 . ATRIBUICAO $@19 expressao

    ATRIBUICAO  shift, and go to state 70


State 49

   72 condicao: IF ABRE_PARENTESES . expressao_booleana $@11 FECHA_PARENTESES THEN condicao2
  113 fator: ABRE_PARENTESES . expressao FECHA_PARENTESES

    ABRE_PARENTESES  shift, and go to state 71
    IDENT            shift, and go to state 50
    NUMERO           shift, and go to state 51

    expressao_booleana  go to state 72
    expressao           go to state 73
    expressao_interna   go to state 54
    termo               go to state 55
    fator               go to state 56


State 50

  111 fator: IDENT .

    $default  reduce using rule 111 (fator)


State 51

  112 fator: NUMERO .

    $default  reduce using rule 112 (fator)


State 52

   74 condicao: IF expressao_booleana . $@12 THEN condicao2

    $default  reduce using rule 73 ($@12)

    $@12  go to state 74


State 53

   91 expressao_booleana: expressao .

    $default  reduce using rule 91 (expressao_booleana)


State 54

   95 expressao: expressao_interna . relacao expressao_interna
   96          | expressao_interna .
  103 expressao_interna: expressao_interna . MAIS termo
  104                  | expressao_interna . MENOS termo
  105                  | expressao_interna . OR termo

    OR           shift, and go to state 75
    IGUAL        shift, and go to state 76
    MAIOR        shift, and go to state 77
    MENOR        shift, and go to state 78
    DESIGUAL     shift, and go to state 79
    MAIOR_IGUAL  shift, and go to state 80
    MENOR_IGUAL  shift, and go to state 81
    MAIS         shift, and go to state 82
    MENOS        shift, and go to state 83

    $default  reduce using rule 96 (expressao)

    relacao  go to state 84


State 55

  106 expressao_interna: termo .
  107 termo: termo . ASTERISCO fator
  108      | termo . DIV fator
  109      | termo . AND fator

    DIV        shift, and go to state 85
    AND        shift, and go to state 86
    ASTERISCO  shift, and go to state 87

    $default  reduce using rule 106 (expressao_interna)


State 56

  110 termo: fator .

    $default  reduce using rule 110 (termo)


State 57

   84 repeticao: WHILE $@15 . repeticao2

    ABRE_PARENTESES  shift, and go to state 88
    IDENT            shift, and go to state 50
    NUMERO           shift, and go to state 51

    repeticao2          go to state 89
    expressao_booleana  go to state 90
    expressao           go to state 53
    expressao_interna   go to state 54
    termo               go to state 55
    fator               go to state 56


State 58

   20 leitura: READ ABRE_PARENTESES . param_read FECHA_PARENTESES

    IDENT  shift, and go to state 91

    param_read  go to state 92
    read        go to state 93


State 59

   24 impressao: WRITE ABRE_PARENTESES . param_write FECHA_PARENTESES

    IDENT   shift, and go to state 94
    NUMERO  shift, and go to state 95

    param_write  go to state 96
    write        go to state 97


State 60

   59 comandos: leitura PONTO_E_VIRGULA . comandos
   60         | leitura PONTO_E_VIRGULA .

    IDENT  shift, and go to state 31
    IF     shift, and go to state 32
    WHILE  shift, and go to state 33
    READ   shift, and go to state 34
    WRITE  shift, and go to state 35

    $default  reduce using rule 60 (comandos)

    leitura     go to state 36
    impressao   go to state 37
    comandos    go to state 98
    condicao    go to state 39
    repeticao   go to state 40
    atribuicao  go to state 41


State 61

   62 comandos: impressao PONTO_E_VIRGULA . comandos
   63         | impressao PONTO_E_VIRGULA .

    IDENT  shift, and go to state 31
    IF     shift, and go to state 32
    WHILE  shift, and go to state 33
    READ   shift, and go to state 34
    WRITE  shift, and go to state 35

    $default  reduce using rule 63 (comandos)

    leitura     go to state 36
    impressao   go to state 37
    comandos    go to state 99
    condicao    go to state 39
    repeticao   go to state 40
    atribuicao  go to state 41


State 62

   30 comando_composto: T_BEGIN comandos T_END .

    $default  reduce using rule 30 (comando_composto)


State 63

   68 comandos: condicao PONTO_E_VIRGULA . comandos
   69         | condicao PONTO_E_VIRGULA .

    IDENT  shift, and go to state 31
    IF     shift, and go to state 32
    WHILE  shift, and go to state 33
    READ   shift, and go to state 34
    WRITE  shift, and go to state 35

    $default  reduce using rule 69 (comandos)

    leitura     go to state 36
    impressao   go to state 37
    comandos    go to state 100
    condicao    go to state 39
    repeticao   go to state 40
    atribuicao  go to state 41


State 64

   65 comandos: repeticao PONTO_E_VIRGULA . comandos
   66         | repeticao PONTO_E_VIRGULA .

    IDENT  shift, and go to state 31
    IF     shift, and go to state 32
    WHILE  shift, and go to state 33
    READ   shift, and go to state 34
    WRITE  shift, and go to state 35

    $default  reduce using rule 66 (comandos)

    leitura     go to state 36
    impressao   go to state 37
    comandos    go to state 101
    condicao    go to state 39
    repeticao   go to state 40
    atribuicao  go to state 41


State 65

   56 comandos: atribuicao PONTO_E_VIRGULA . comandos
   57         | atribuicao PONTO_E_VIRGULA .

    IDENT  shift, and go to state 31
    IF     shift, and go to state 32
    WHILE  shift, and go to state 33
    READ   shift, and go to state 34
    WRITE  shift, and go to state 35

    $default  reduce using rule 57 (comandos)

    leitura     go to state 36
    impressao   go to state 37
    comandos    go to state 102
    condicao    go to state 39
    repeticao   go to state 40
    atribuicao  go to state 41


State 66

   33 procedure_function: PROCEDURE $@5 IDENT . $@6 procedure_function2 PONTO_E_VIRGULA procedure_function3

    $default  reduce using rule 32 ($@6)

    $@6  go to state 103


State 67

   36 procedure_function: FUNCTION $@7 IDENT . $@8 procedure_function2 DOIS_PONTOS retorno_func PONTO_E_VIRGULA procedure_function3

    $default  reduce using rule 35 ($@8)

    $@8  go to state 104


State 68

   16 lista_id_var: lista_id_var VIRGULA . IDENT

    IDENT  shift, and go to state 105


State 69

   14 declara_var: $@4 lista_id_var DOIS_PONTOS . tipo PONTO_E_VIRGULA

    IDENT  shift, and go to state 106

    tipo  go to state 107


State 70

   94 atribuicao: IDENT $@18 ATRIBUICAO . $@19 expressao

    $default  reduce using rule 93 ($@19)

    $@19  go to state 108


State 71

  113 fator: ABRE_PARENTESES . expressao FECHA_PARENTESES

    ABRE_PARENTESES  shift, and go to state 71
    IDENT            shift, and go to state 50
    NUMERO           shift, and go to state 51

    expressao          go to state 109
    expressao_interna  go to state 54
    termo              go to state 55
    fator              go to state 56


State 72

   72 condicao: IF ABRE_PARENTESES expressao_booleana . $@11 FECHA_PARENTESES THEN condicao2

    $default  reduce using rule 71 ($@11)

    $@11  go to state 110


State 73

   91 expressao_booleana: expressao .
  113 fator: ABRE_PARENTESES expressao . FECHA_PARENTESES

    FECHA_PARENTESES  shift, and go to state 111

    FECHA_PARENTESES  [reduce using rule 91 (expressao_booleana)]


State 74

   74 condicao: IF expressao_booleana $@12 . THEN condicao2

    THEN  shift, and go to state 112


State 75

  105 expressao_interna: expressao_interna OR . termo

    ABRE_PARENTESES  shift, and go to state 71
    IDENT            shift, and go to state 50
    NUMERO           shift, and go to state 51

    termo  go to state 113
    fator  go to state 56


State 76

  101 relacao: IGUAL .

    $default  reduce using rule 101 (relacao)


State 77

   97 relacao: MAIOR .

    $default  reduce using rule 97 (relacao)


State 78

   98 relacao: MENOR .

    $default  reduce using rule 98 (relacao)


State 79

  102 relacao: DESIGUAL .

    $default  reduce using rule 102 (relacao)


State 80

   99 relacao: MAIOR_IGUAL .

    $default  reduce using rule 99 (relacao)


State 81

  100 relacao: MENOR_IGUAL .

    $default  reduce using rule 100 (relacao)


State 82

  103 expressao_interna: expressao_interna MAIS . termo

    ABRE_PARENTESES  shift, and go to state 71
    IDENT            shift, and go to state 50
    NUMERO           shift, and go to state 51

    termo  go to state 114
    fator  go to state 56


State 83

  104 expressao_interna: expressao_interna MENOS . termo

    ABRE_PARENTESES  shift, and go to state 71
    IDENT            shift, and go to state 50
    NUMERO           shift, and go to state 51

    termo  go to state 115
    fator  go to state 56


State 84

   95 expressao: expressao_interna relacao . expressao_interna

    ABRE_PARENTESES  shift, and go to state 71
    IDENT            shift, and go to state 50
    NUMERO           shift, and go to state 51

    expressao_interna  go to state 116
    termo              go to state 55
    fator              go to state 56


State 85

  108 termo: termo DIV . fator

    ABRE_PARENTESES  shift, and go to state 71
    IDENT            shift, and go to state 50
    NUMERO           shift, and go to state 51

    fator  go to state 117


State 86

  109 termo: termo AND . fator

    ABRE_PARENTESES  shift, and go to state 71
    IDENT            shift, and go to state 50
    NUMERO           shift, and go to state 51

    fator  go to state 118


State 87

  107 termo: termo ASTERISCO . fator

    ABRE_PARENTESES  shift, and go to state 71
    IDENT            shift, and go to state 50
    NUMERO           shift, and go to state 51

    fator  go to state 119


State 88

   86 repeticao2: ABRE_PARENTESES . expressao_booleana FECHA_PARENTESES DO $@16 repeticao3
  113 fator: ABRE_PARENTESES . expressao FECHA_PARENTESES

    ABRE_PARENTESES  shift, and go to state 71
    IDENT            shift, and go to state 50
    NUMERO           shift, and go to state 51

    expressao_booleana  go to state 120
    expressao           go to state 73
    expressao_interna   go to state 54
    termo               go to state 55
    fator               go to state 56


State 89

   84 repeticao: WHILE $@15 repeticao2 .

    $default  reduce using rule 84 (repeticao)


State 90

   88 repeticao2: expressao_booleana . DO $@17 repeticao3

    DO  shift, and go to state 121


State 91

   23 read: IDENT .

    $default  reduce using rule 23 (read)


State 92

   20 leitura: READ ABRE_PARENTESES param_read . FECHA_PARENTESES
   21 param_read: param_read . VIRGULA read

    FECHA_PARENTESES  shift, and go to state 122
    VIRGULA           shift, and go to state 123


State 93

   22 param_read: read .

    $default  reduce using rule 22 (param_read)


State 94

   27 write: IDENT .

    $default  reduce using rule 27 (write)


State 95

   28 write: NUMERO .

    $default  reduce using rule 28 (write)


State 96

   24 impressao: WRITE ABRE_PARENTESES param_write . FECHA_PARENTESES
   25 param_write: param_write . VIRGULA write

    FECHA_PARENTESES  shift, and go to state 124
    VIRGULA           shift, and go to state 125


State 97

   26 param_write: write .

    $default  reduce using rule 26 (param_write)


State 98

   59 comandos: leitura PONTO_E_VIRGULA comandos .

    $default  reduce using rule 59 (comandos)


State 99

   62 comandos: impressao PONTO_E_VIRGULA comandos .

    $default  reduce using rule 62 (comandos)


State 100

   68 comandos: condicao PONTO_E_VIRGULA comandos .

    $default  reduce using rule 68 (comandos)


State 101

   65 comandos: repeticao PONTO_E_VIRGULA comandos .

    $default  reduce using rule 65 (comandos)


State 102

   56 comandos: atribuicao PONTO_E_VIRGULA comandos .

    $default  reduce using rule 56 (comandos)


State 103

   33 procedure_function: PROCEDURE $@5 IDENT $@6 . procedure_function2 PONTO_E_VIRGULA procedure_function3

    ABRE_PARENTESES  shift, and go to state 126

    $default  reduce using rule 38 (procedure_function2)

    procedure_function2  go to state 127


State 104

   36 procedure_function: FUNCTION $@7 IDENT $@8 . procedure_function2 DOIS_PONTOS retorno_func PONTO_E_VIRGULA procedure_function3

    ABRE_PARENTESES  shift, and go to state 126

    $default  reduce using rule 38 (procedure_function2)

    procedure_function2  go to state 128


State 105

   16 lista_id_var: lista_id_var VIRGULA IDENT .

    $default  reduce using rule 16 (lista_id_var)


State 106

   15 tipo: IDENT .

    $default  reduce using rule 15 (tipo)


State 107

   14 declara_var: $@4 lista_id_var DOIS_PONTOS tipo . PONTO_E_VIRGULA

    PONTO_E_VIRGULA  shift, and go to state 129


State 108

   94 atribuicao: IDENT $@18 ATRIBUICAO $@19 . expressao

    ABRE_PARENTESES  shift, and go to state 71
    IDENT            shift, and go to state 50
    NUMERO           shift, and go to state 51

    expressao          go to state 130
    expressao_interna  go to state 54
    termo              go to state 55
    fator              go to state 56


State 109

  113 fator: ABRE_PARENTESES expressao . FECHA_PARENTESES

    FECHA_PARENTESES  shift, and go to state 111


State 110

   72 condicao: IF ABRE_PARENTESES expressao_booleana $@11 . FECHA_PARENTESES THEN condicao2

    FECHA_PARENTESES  shift, and go to state 131


State 111

  113 fator: ABRE_PARENTESES expressao FECHA_PARENTESES .

    $default  reduce using rule 113 (fator)


State 112

   74 condicao: IF expressao_booleana $@12 THEN . condicao2

    T_BEGIN  shift, and go to state 132
    IDENT    shift, and go to state 31
    IF       shift, and go to state 32
    WHILE    shift, and go to state 33
    READ     shift, and go to state 34
    WRITE    shift, and go to state 35

    leitura     go to state 36
    impressao   go to state 37
    comandos    go to state 133
    condicao    go to state 39
    condicao2   go to state 134
    condicao3   go to state 135
    repeticao   go to state 40
    atribuicao  go to state 41


State 113

  105 expressao_interna: expressao_interna OR termo .
  107 termo: termo . ASTERISCO fator
  108      | termo . DIV fator
  109      | termo . AND fator
